sandbox/output
QualityAndSellInCalculator.java:2: error: constructor QualityAndSellInCalculator in enum QualityAndSellInCalculator cannot be applied to given types;
    AgedBrie {
             ^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length
QualityAndSellInCalculator.java:12: error: constructor QualityAndSellInCalculator in enum QualityAndSellInCalculator cannot be applied to given types;
    BackStagePasses {
                    ^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length
2 errors
Error: Could not find or load main class TexttestFixture
